# fontrendereringstuff

./: Cargo.toml
src/: down_sample.frag  down_sample.vert  down_sample.wgsl  main.rs  mesh.rs  renderer.rs  shader.frag  shader.vert  shader.wgsl  text.rs
src/shader/: glyph.wgsl
